fix: se agrega el controlador para una nueva tabla de la bd con la correspondiente migracion
